openai_api_key added

--- a/env.example
+++ b/env.example
@@ -2,3 +2,4 @@ BOT_APP_ID=your_bot_app_id
 BOT_PUBLIC_KEY=your_bot_public_key
 BOT_TOKEN=your_bot_token
 BOT_PERMISSIONS=your_bot_permissions_integer
+OPENAI_API_KEY=your_openai_api_key
