setting up for server deployment

--- a/env.example
+++ b/env.example
@@ -3,3 +3,7 @@ BOT_PUBLIC_KEY=your_bot_public_key
 BOT_TOKEN=your_bot_token
 BOT_PERMISSIONS=your_bot_permissions_integer
 OPENAI_API_KEY=your_openai_api_key
+GUNICORN_PROCESSES=2
+GUNICORN_THREADS=4
+GUNICORN_TIMEOUT=120
+GUNICORN_BIND=0.0.0.0:8080
