--- a/bot_config.yml
+++ b/bot_config.yml
@@ -1,6 +1,58 @@
 server:
   name: 'Knowledge Kitchen'
   courses:
+    - title: 'Software Engineering'
+      file_prefix: 'se' # used to recognize any roster or other CSV files releated to this course
+      openai_assistant:
+        id: 'asst_v3LwgUI88xJVA8gAVb72auPV' # created in the OpenAI "Playground"
+        name: 'Bloombot (Software Engineering)'
+        instructions: 'You are a personal assistant to Clinical Professor of Computer Science, Amos Bloomberg, at New York University teaching a Software Engineering course. Help answer questions about course material and the schedule and syllabus. Answer questions based on the information in the uploaded files.  Keep responses to 1 paragraph at most.'
+        tools: [] #[{ 'type': 'code_interpreter' }]
+        model: 'gpt-4o'
+        limits:
+          max_requests_per_day: 20 # per user
+      roles:
+        # roles in our Discord server that we recognize as dedicated to this course
+        admins: 'admins-se-f25'
+        students: 'students-se-f25'
+      categories:
+        # categories in our Discord server that we recognize as dedicated to this course
+        - 'Software Engineering - GLOBAL'
+        - 'Software Engineering - STUDENTS 01'
+        - 'Software Engineering - STUDENTS 02'
+        - 'Software Engineering - STUDENTS 03'
+        - 'Software Engineering - STUDENTS 04'
+        - 'Software Engineering - TEAMS 01'
+        - 'Software Engineering - TEAMS 02'
+        - 'Software Engineering - TEAMS 03'
+        - 'Software Engineering - TEAMS 04'
+        - 'Software Engineering - TEAMS 05'
+    - title: 'Agile Software Development & DevOps'
+      file_prefix: 'ad' # used to recognize any roster or other CSV files releated to this course
+      openai_assistant:
+        id: 'asst_ba9KVJqEx54KUAFzrlzfETfg' # created in the OpenAI "Playground"
+        name: 'Bloombot (Agile Software Dev & DevOps)'
+        instructions: 'You are a personal assistant to Clinical Professor of Computer Science, Amos Bloomberg, at New York University teaching an Agile Software Development course following Scrum and focused on the Javascript MERN stack. Help answer questions about course material and the schedule and syllabus. Answer questions based on the information in the uploaded files.  Keep responses to 1 paragraph at most.'
+        tools: [] #[{ 'type': 'code_interpreter' }]
+        model: 'gpt-4o'
+        limits:
+          max_requests_per_day: 20 # per user
+      roles:
+        # roles in our Discord server that we recognize as dedicated to this course
+        admins: 'admins-ad-f25'
+        students: 'students-ad-f25'
+      categories:
+        # categories in our Discord server that we recognize as dedicated to this course
+        - 'Agile Dev - GLOBAL'
+        - 'Agile Dev - STUDENTS 01'
+        - 'Agile Dev - STUDENTS 02'
+        - 'Agile Dev - STUDENTS 03'
+        - 'Agile Dev - STUDENTS 04'
+        - 'Agile Dev - TEAMS 01'
+        - 'Agile Dev - TEAMS 02'
+        - 'Agile Dev - TEAMS 03'
+        - 'Agile Dev - TEAMS 04'
+        - 'Agile Dev - TEAMS 05'
     - title: 'Introduction to Programming'
       file_prefix: 'py' # used to recognize any roster or other CSV files releated to this course
       openai_assistant:
